fix: hide header on about/404 pages on mobile

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -9,7 +9,8 @@
     color-scheme: light;
 }
 
-body.page-photo header {
+body.page-photo header,
+body.page-general header {
     @apply hidden md:flex;
 }
 
